# px4_rover_boat

./: .gitignore  .gitmodules  PX4-SITL  README.md  create_px4_container.sh  plot_results.py  px4_layout.xml  simulate.py
cad_px4_jet_ski/: 4022_gz_jet_ski  jet_ski.sdf
cad_px4_jet_ski/jet_ski/: model.config  model.sdf
cad_px4_jet_ski/jet_ski/meshes/: jet_ski.dae  jet_ski.stl
check_PX4_controller/: check_PX4_controller.m  controller.m  dynamics.m
check_PX4_controller/util/: A_static_SX.m  compute_A_.m  compute_A_SX.m  seventh_order_poly_traj.m  vmap.m
src/trajectory_publisher/: CMakeLists.txt  package.xml
src/trajectory_publisher/conf/: param.yaml
src/trajectory_publisher/csv_file/: 1mXYZ_4s.csv  1mXYZ_Yaw_4s.csv  1mXY_2s.csv  1mXY_4s.csv  1mXY_Yaw_4s.csv  1mX_2s.csv  1mX_4s.csv  drone_data.csv  drone_data1.csv  drone_data2.csv  drone_data3.csv  drone_data4.csv  drone_data_20_6_2023.csv  drone_data_23_6_2023.csv  init_4s.csv  init_5s.csv  traj_PI_3.5s.csv  traj_init_3.5s.csv
src/trajectory_publisher/include/trajectory_publisher/: trajectory_publisher.hpp
src/trajectory_publisher/launch/: iris.launch.py
src/trajectory_publisher/src/: rover_publisher.cpp  trajectory_publisher.cpp
